2007-07-10  Werner Koch  <wk@g10code.com>

	Released 1.1.1.

	* src/gpg4win.nsi [GPG4WIN_LIGHT]: Undef gnupg2 and related libs.
	Undef the English novices manual.
	* src/installer-finish.nsi: Delete the link for the English novices
	manual and the claws manual.

	* src/uninst-sylpheed-claws.nsi: Delete the manual even when using
	the lighjt version.  This is to allow updating with a light version.
	* src/uninst-claws-mail.nsi: Ditto.

	* src/installer-finish.nsi: Changed publisher name to "The Gpg4win
	Project".

	* src/gpg4win.nsi: Fixed capitalization of some Gpg4win strings.
	* src/gpg4win-src.nsi: Ditto.

2007-07-09  Werner Koch  <wk@g10code.com>

	* src/uninst-gnupg2.nsi: Need to remove com-certs.pem.

	* src/inst-gnupg2.nsi: Make it an optional package.
	Add description.
	* src/inst-sections.nsi: Include language macro for description.

2007-07-09  Marcus Brinkmann  <marcus@g10code.de>

	* patches/gpgol-0.9.91/01-gpgme.patch: New file.
	* Makefile.am (EXTRA_DIST): Add patches/gpgol-0.9.91/01-gpgme.patch.

	* packages/download.sh: Implement a new function "ren" for
	renaming.
	* packages/packages.current: Rename gnupg 2.

	* packages/packages.current: Update to GPGME 1.1.5.

	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Enable gpgsm.

2007-07-05  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to Gtk+ 2.10.13.

	* patches/claws-mail-2.10.0/03-w32-port.patch: Fix cut&paste bug.
	* patches/claws-mail-2.9.2/03-w32-port.patch: Likewise.
	Spotted by Colin Leroy.

2007-07-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* README: Added just another dependency that sometimes happen to miss.

2007-07-03  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update sylpheed entry to claws-mail.

	* configure.ac: Add dirmngr.
	* include/config.nsi.in: Add dirmngr.
	* src/Makefile.am (gpg4win_spkgs): Add dirmngr.
	(gpg4win_pkg_dirmngr_configure): New variable.